samples/_failures_safe/1761363781_c2a268_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c81e8c51.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c81e8c51.c:189:12: error: missing terminating " character
  189 |     printf("Dijkstra distances
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c81e8c51.c:189:5: error: expected expression at end of input
  189 |     printf("Dijkstra distances
      |     ^~~~~~
./samples/SAFE/__tmp_c81e8c51.c:189:5: error: expected declaration or statement at end of input
